--- a/index.html
+++ b/index.html
@@ -35,6 +35,36 @@
                 </li>
                </ol> </p>
            <h1><a href="home/ahmed/Desktop/Github repository/grassroot-recipe/Wasawasa/wasawasa.html">Wasawasa</a></h1>
+                 <P><img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/Wasawasa/image/wasawasa1.jpg"></P>
+             <P><img alt="/home/ahmed/Desktop/Github repository/grassroot-recipe/Wasawasa/image/wasawasa1.jpg"></P>
+             <p><img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/Wasawasa/image/wasawasa2.jpeg"></p>
+             <p><img alt="/home/ahmed/Desktop/Github repository/grassroot-recipe/Wasawasa/image/wasawasa2.jpeg"></p>
+             <p>Wasawasa is a popular dish, eaten in <em>Dagbon and other parts of Northern Ghana</em>. It is also eaten in some <em>West African countries, such as Burkina Faso</em>. It is made from dried yam peelings called <strong>jaling</strong>, which have been grounded into flour and steamed. Wasawasa is mostly eaten with spicy sauces and sometimes garnished with vegetables, accompanied with shea butter or raw groundnut oil and fried fish. Wasawasa is sometimes served with beans, pasta, and salad.</p>
+              <p><h2>Ingredients for preparation of Wasawasa/p></h2>
+              <p><ul>
+                <li>Yam flour</li>
+                <li>Salt</li>
+                <li>freshly grinded pepper</li>
+                <li>water</li>
+                <li>onions</li>
+                <li>goundnuts and shearbutter oil</li>  
+            </ul></p>
+            <p><h2>Steps in involved in preparation of Wasawasa</p></h2>
+            <P><ol>
+                <li>Fetch the yam flour into a pan</li>
+                <li>Add a little amount water into the content</li>
+                <li>Mix the content with water with hands until you get an even balls</li>
+                <li>Put the mixture into a seive</li>
+                <li>Heat water in another pan</li>
+                <li>Place the pan with the mixture on the pan with hot water</li>
+                <li>Keep the pan with hot water on fire and the pan with the mixture on the pan with hot water</li>
+                <li>Make sure the pan with the mixture is completely covered with a rubber, such that the vapour does not escape</li>
+                <li>Keep the setup until it is completely cooked</li>
+                <li>When the mixture turn blackish, it is cooked</li>
+                <li>Serve the cooked Wasawasa in a plate and garnish it with oil, salt, pepper, onions, tomatoes, beans,cabbage</li>
+            </ol></P>
+
+
            <h1><a href="/home/ahmed/Desktop/Github repository/grassroot-recipe/Waakye/Waakye.html">Waakye</a></h1>
 <a href="Waakye.html/Waakye">Waakye</a>
         <h1>Waakye</h1>
