--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <h1>Waakye</h1>
         <p><img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/Waakye/images/Waakye1.jpeg"></p>
         <p><img alt="/home/ahmed/Desktop/Github repository/grassroot-recipe/Waakye/images/Waakye1.jpeg"></p>
+        <p><img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/Waakye/images/Waakye.jpeg"></P>
         <p>Waakye is a Ghanaian dish of cooked rice and beans, commonly eaten for breakfast or lunch. However, others eat it for supper. The rice and beans, usually black eyed peas or cow beans, are cooked together, along with red dried sorghum leaf sheaths or stalks and limestone. The sorghum leaves and limestone give the dish its characteristic flavor and a red appearance and the sorghum is taken out before consumption. The word waakye is from the Nigerian Hausa language and means beans. It is the contracted form of the full name shinkafa da wake which means rice and beans</p>
         <p><h2>Ingredients for Preparation of Waakye</h2></p>
         <p><ul>
