stylesheet link to html file

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
        <meta charset="utf-8">
        <title>Grassroot-recipes</title>
+       <link rel="stylesheet" href="/styles.css/grassroot-recipe/Yussifgh/github.com">
     </head>
     <body>
         <h1>Grassroot-Recipes</h1>
        <h1><a href="recipes/tubani.html">Tubani</a></h1>
         <img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/recipes/maxresdefault-2-1140x694.jpg" alt="">
-       <img alt="/home/ahmed/Desktop/Github repository/grassroot-recipe/recipes/maxresdefault-2-1140x694.jpg"</img></p>
        <p><img src="/home/ahmed/Desktop/Github repository/grassroot-recipe/recipes/WhatsApp Image 2023-04-27 at 12.48.51 PM (1).jpeg" alt=""></p>
         <p><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQITNv0bNa1B0bEl5_Cd9xrQpQ-01ZDZL9_SQ&usqp=CAU"></p>
         <p> <h4>Size:149.8 KiB (153,368 bytes)......</h4>
