--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
        <meta charset="utf-8">
        <title>Grassroot-recipes</title>
+       <link text="text/css" rel="stylesheet" href="github.io.com/yussifgh/grassroot-recipe/styles.css">
     </head>
     <body>
         <h1>Grassroot-Recipes</h1>
