--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
        <meta charset="utf-8">
        <title>Grassroot-recipes</title>
        <link rel="stylesheet" href="/home/ahmed/Desktop/Github repository/grassroot-recipe/CSS/styles.css">
-    </head>
+    <style>*{color:black; 
+      background-image: image-set(/home/ahmed/Desktop/Github repository/grassroot-recipe/image/Tuubani.jpeg): repeat-y;
+       background-color: bisgue; font-size: medium; /* several unique declarations */}
+   h1,h2,h3{color:gold; background-color: green;
+       font-size:x-large; font-style:Times-New-Roman;
+        text-align: center;/* several unique declarations */}
+   #title{color:gold; background-color: #ff00ff; font-size:x-large; text-align: center; font-style: Aharoni; /* several unique declarations */}
+  img{height: 250px;
+  width:700px}
+  .Steps:, .Ingredients:, .Tubani:, .Menu:, .Home:{color: goldenrod; background-color: bisque; font-size: 40;font-weight: 700;font-style:normal;}
+         p{color: white; background-color: black; font-size: 24; font-family: Georgia, 'Times New Roman', Times, serif;}</style>
+         button{color: white; background-color: gold; 
+          font-size: 12px; position: top-left;}
+          /Tubani{color: pink; font-size: 38; text-align: center; /*several unique declarations*/}
+  strong{color: greenyellow;}
+  em{color:greenyellow;}
+  .text-deco{text-decoration: none;}
+  </style>
+      </head>
     <body>
        <button class="text-deco"><a href="/home/ahmed/Desktop/Github repository/grassroot-recipe/Home/home.html">Menu</a></button>
         <h1>Grassroot-Recipes</h1>
